--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">FUMIC</string>
+    <!--
+Date 6/3/2024
+List book
+-->
+    <string name="sort_by_views">Sort by Views</string>
+    <string name="sort_by_date">Sort by Date</string>
+    <string name="sort_by_id">Sort by ID</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
